Fixing Alignment

--- a/source/css/global/base/_type.scss
+++ b/source/css/global/base/_type.scss
@@ -58,6 +58,7 @@ hr {
     margin-top: $s-1;
     margin-bottom: $s-1;
     border: 0;
+    text-align: left;
     border-top: $s-1px solid rgba(0,0,0,0.1);
 }
 
